# agent-tmux-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROGRESS_TRACKER.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
atm-plan/: WEEK_1_PLANNING_AND_VALIDATION.md  WEEK_2-3_PHASE_1_IMPLEMENTATION.md  WEEK_4_PHASES_2-3_TUI_AND_INTEGRATION.md  WEEK_5+_PHASES_4-5_POLISH.md
crates/atm/: Cargo.toml
crates/atm-claude-adapter/: Cargo.toml
crates/atm-claude-adapter/src/: lib.rs  translate.rs  wire.rs
crates/atm-core/: Cargo.toml
crates/atm-core/src/: agent.rs  beads.rs  context.rs  cost.rs  error.rs  harness.rs  harness_registry.rs  hook.rs  lib.rs  lifecycle.rs  model.rs  project.rs  session.rs  tool.rs  tree.rs
crates/atm-pi-adapter/: Cargo.toml
crates/atm-pi-adapter/examples/: parity_demo.rs
crates/atm-pi-adapter/src/: event.rs  lib.rs  translate.rs  wire.rs
crates/atm-protocol/: Cargo.toml
crates/atm-protocol/src/: lib.rs  message.rs  parse.rs  version.rs
crates/atm-protocol/tests/: proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
crates/atm-tmux/: Cargo.toml
crates/atm-tmux/src/: client.rs  layout.rs  lib.rs  mock.rs
crates/atm-tmux/tests/: tmux_integration.rs
crates/atm/assets/pi-atm/: package.json
crates/atm/assets/pi-atm/extensions/: pi-atm.ts
crates/atm/scripts/: atm-hook
crates/atm/src/: app.rs  client.rs  daemon.rs  error.rs  input.rs  keybinding.rs  lib.rs  main.rs  setup.rs  tmux.rs
crates/atm/src/ui/: detail_panel.rs  help_popup.rs  layout.rs  mod.rs  session_list.rs  status_bar.rs  theme.rs
crates/atm/tests/: ui_snapshots.rs
crates/atm/tests/snapshots/: ui_snapshots__compact_footer_default.snap  ui_snapshots__compact_preview_falls_back_to_status.snap  ui_snapshots__compact_session_list_narrow.snap  ui_snapshots__detail_panel_inline_empty.snap  ui_snapshots__detail_panel_inline_no_capture.snap  ui_snapshots__detail_panel_inline_with_capture_split.snap  ui_snapshots__footer_in_tmux.snap  ui_snapshots__header_connected_with_sessions.snap  ui_snapshots__header_disconnected_with_retries.snap  ui_snapshots__help_popup_in_tmux.snap  ui_snapshots__session_list_attention_needed_row.snap  ui_snapshots__session_list_collapsed_with_attention_count.snap  ui_snapshots__session_list_multi_project_with_worktrees.snap  ui_snapshots__session_list_subagent_nesting.snap  ui_snapshots__session_list_two_agents_in_one_project.snap
crates/atmd/: Cargo.toml
crates/atmd/src/: discovery.rs  lib.rs  main.rs  monitor.rs  tmux.rs
crates/atmd/src/registry/: actor.rs  commands.rs  handle.rs  mod.rs
crates/atmd/src/server/: connection.rs  mod.rs
crates/atmd/tests/: registry_integration.rs  robustness_tests.rs  server_integration.rs
docs/: CLAUDE_CODE_HOOKS_REFERENCE.md  CONCURRENCY_MODEL.md  DOMAIN_MODEL.md  ERROR_HANDLING.md  HOOK_EVENT_HANDLING_DESIGN.md  PI_INTEGRATION.md  PROTOCOL_VERSIONING.md  RESOURCE_LIMITS.md
docs/plans/: 2026-01-27-session-status-transition-design.md  2026-01-27-session-status-transition-impl.md  2026-02-09-roadmap-overhaul-design.md  2026-04-03-atm-v2-workspace-manager-design.md  2026-04-04-layout-templates-plan.md
extensions/pi/: README.md  atm-pi-hook.ts  package.json
extensions/pi-atm/: README.md  package.json
extensions/pi-atm/extensions/: pi-atm.ts
extensions/pi-spike/: .gitignore  README.md  event-trace.ts
integration-test/: CLAUDE_CODE_INTEGRATION.md  README.md  new_file.README  test-hooks.sh  test-status-line.sh
integration-test/.claude/: hooks.json  settings.json
scripts/: atm-hook  install.sh
test-scripts/: debug-ppid.sh  test-daemon.sh
tests/: e2e_with_tmux.rs
