[package]
name = "atm-claude-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Claude Code adapter for ATM — translates Claude raw hook events into vendor-neutral LifecycleEvent"

[dependencies]
atm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
