[package]
name = "atm-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TUI client library for ATM - Claude Code agent monitoring"
readme = "../../README.md"

[lib]
name = "atm_tui"
path = "src/lib.rs"

[dependencies]
atm-core = { workspace = true }
atm-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
